css/custom.css
@import url('https://fonts.googleapis.com/css?family=Roboto:700');

html {
  scroll-behavior: smooth;
  max-width: 100%;
  overflow-x: hidden;
}

body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  background: #0a192f;
}

* p, span {
  color: #8892b0;
}

.portfolio-piece {
  width: 100%;
  padding: 0px;
  opacity: 0;
  transition: all .5s ease-out;
}

.portfolio-piece.fade-in {
  opacity: 1;
  transform: translateY(0);
}

/* navbar styling */

nav {
  background: #0a192f;
  padding-left: 5rem;
  padding-right: 5rem;
}

.nav-links-div {
  display: flex;
  align-items: center;
  justify-content: center;
}

nav ul {
  display: flex;
  justify-content: space-between;
  padding-left: 0px;
  width: 100%;
  margin-bottom: 0px;
  align-items: center;
}

nav ul li {
  list-style: none;
  display: inline;
}

nav ul li a {
  color: #8892b0;
  text-decoration: none;
}

nav ul li a:hover {
  color: #64ffda;
}

.button-link {
  border-color: #64ffda;
  color:#64ffda!important;
}

.button-link:hover {
  background-color: rgba(100, 255, 218, .3);
  border-color: #64ffda;
  color:#64ffda;
}

.brand-logo {
  width: 10%
}

/* side social */

.side-social {
  position: fixed;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.side-social a {
  border: 1px solid #0a192f;
  display: block;
  text-align: center;
  padding: 16px;
  transition: all 0.3s ease;
  color: #0a192f;
  font-size: 20px;
}

/* Style the social media icons with color, if you want */
.side-social a:hover {
  background-color: #0a192f;
  color: #64ffda;
}

.github,
.linkedin,
.globe {
  background: #64ffda;
  color: #0a192f;
}

/* hero section */

#intro-hi {
  color: #64ffda;
}

#intro-name {
  color: #ccd6f6;
  font-size: clamp(40px, 8vw, 80px);
}

#intro-final {
  color: #8892b0;
  font-size: clamp(40px, 8vw, 80px);
}

#intro-paragraph {
  width: 50%;
}

/* About me section */

.header-text {
  color: #ccd6f6;
  border-bottom: 1px solid #ccd6f6;
  width: 30%;
}

.mobile-nav,
.mobile-menu {
  display: none;
}

/* general themes */

.underlines {
  width: 555px;
}

/* top text area */

.txt-type > .txt {
  border-right: 0.2rem solid #777;
}

/* top social media */

.top-github,
.top-linkedin,
.top-email {
  font-size: 28px;
  width: 32px;
}

.profile_picture {
  width: 60%;
  border-radius: 10px;
  box-shadow: 30px 30px 0px #0a192f, 32px 32px 0px #64ffda;
}

/* SKILLS */

.skills {
  display: block;
  clear: both;
}

.skill-pic > i {
  font-size: 100px;
  color: #8892b0;
}

.top-link {
  float: right;
  color: #0a192f;
  background-color: #64ffda;
  text-align: center;
  border-radius: 3px;
  width: 32px;
}

ul.social-media {
  margin-bottom: 0;
  display: flex;
  justify-content: space-between;
  width: 30%;
  margin: auto;
}

.social-media li {
  display: inline-block;
}

/* skills */
.skill-pic {
  font-size: 32px;
}

.skill-row {
  margin-bottom: 32px;
}

/* Portfolio Projects */

.card {
  background-color: #172a45;
  box-shadow: 0 10px 30px -15px rgba(2,12,27,0.7);
}

.card-title {
  color: #ccd6f6;
  font-size: 1.5em;
  font-weight: 600;
}

.zoomImage {
  overflow: hidden;
  text-align: center;
}

img {
  transition: 0.75s;
  z-index: 1;
}

.grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
}

.child {
  width: 100%;
  background-size: cover;
  background-repeat: no-repeat;
  -webkit-transition: all .5s;
  -moz-transition: all .5s;
  -o-transition: all .5s;
  transition: all .5s;
  justify-content: stretch;
}

/* Footer */

footer {
  z-index: 1;
}

/* bottom social media */

ul.social-media li a i {
  color: #8892b0;
}

.bottom-github,
.bottom-linkedin,
.bottom-email,
.bottom-resume {
  font-size: 32px;
}

ul.social-media {
  padding-left: 0;
}

/* project pages styles */
.badge {
  background: #64ffda;
  color: #0a192f;
}

@media (max-width: 600px) {

  html, body {
    max-width: 100%;
    overflow-x: hidden;
  }

  .desktop-nav {
    display: none;
  }

  .hero-section {
    margin-top: 0px!important;
  }

  /* mobile nav */

  .menu-toggle,
  .menu-exit {
    width: 100%;
    color: #ccd6f6;
    font-size: 24px;
    display: flex;
    padding-top: 1em;
    padding-right: 1em;
    justify-content: flex-end;
    margin-bottom: 2em;
  }

  .mobile-nav {
    display: block;
    grid-template-columns: 1fr 1fr 1fr;
    background-color: #0a192f;;
    position: fixed;
    width: 0px;
    z-index: 10001;
    height: 100vh;
    margin-top: 0px;
    top: 0;
    left: 0;
    padding: 0px;
    box-sizing: border-box;
    overflow-x: hidden;
    transition: 0.5s;
  }

  .mobile-nav ul {
    display: block;
    width: 100%;
    box-sizing: border-box;
  }

  .mobile-nav ul li:nth-child(1) {
    border-top: 1px solid #ccd6f6;
  }

  .mobile-nav ul li {
    display: flex;
    width: 100%;
    justify-content: center;
    border-bottom: 1px solid #ccd6f6;
  }

  .mobile-nav ul li a {
    font-size: 2em;
  }

  .profile_picture {
    width: 100%;
  }

  /* skills */
  .skill-pic {
    font-size: 44px;
  }

  .skill-row {
    margin-bottom: 0;
  }

  .title,
  .top-social-media {
    width: 300px;
  }

  /* top text area mobile-view */
  .typing-txt {
    font-size: 24px;
  }

  /* new mobile styles 2020 theme  */

  .side-social {
    display: none;
  }

  .hero-section {
    text-align: center;
  }

  #intro-paragraph {
    width: 100%;
  }

  /* header titles mobile view */

  .header-text {
    width: 100%;
    text-align: center;
    border-bottom: none;
  }

  /* profile picture mobile view */

  .profile_picture {
    box-shadow: none;
  }

  /* project cards */

  div.grid.container {
    grid-template-columns: 100%;
  }

  /* footer mobile view */

  ul.social-media {
    width: 100%;
  }

  /* specific project pages mobile view */

  .project-page-picture {
    margin-top: 2em;
    width: 100%;
  }

}

